crates/shipper-policy/src/snapshots/shipper_policy__snapshot_tests__snapshot_safe_all_flags_true.snap
---
source: crates/shipper-policy/src/lib.rs
assertion_line: 547
expression: effects
---
PolicyEffects {
    run_dry_run: false,
    check_ownership: false,
    strict_ownership: true,
    readiness_enabled: true,
}
