crates/shipper-policy/src/snapshots/shipper_policy__snapshot_tests__snapshot_safe_skip_ownership.snap
---
source: crates/shipper-policy/src/lib.rs
assertion_line: 535
expression: effects
---
PolicyEffects {
    run_dry_run: true,
    check_ownership: false,
    strict_ownership: true,
    readiness_enabled: true,
}
